--- a/index.hbs
+++ b/index.hbs
@@ -26,11 +26,11 @@
             <section class="post-excerpt">
                 <p>{{excerpt characters="400"}}&hellip;</p>
             </section>
-            <a class="button read-more right small" href="{{url}}">Read more</a>
+            <a class="button read-more right small" href="{{url}}">阅读更多</a>
             {{#if tags}}
             <aside class="tags fi-pricetag-multiple">{{tags prefix="Posted on "}}</aside>
             {{else}}
-            <aside class="tags fi-pricetag-multiple">No tag</aside>
+            <aside class="tags fi-pricetag-multiple">没标签</aside>
             {{/if}}
             <div class="clearfix"></div>
         </div>
@@ -45,11 +45,11 @@
         <section class="post-excerpt">
             <p>{{excerpt characters="400"}}&hellip;</p>
         </section>
-        <a class="button read-more right small" href="{{url}}">Read more</a>
+        <a class="button read-more right small" href="{{url}}">阅读更多</a>
         {{#if tags}}
         <aside class="tags fi-pricetag-multiple">{{tags prefix="Posted on "}}</aside>
         {{else}}
-        <aside class="tags fi-pricetag-multiple">No tag</aside>
+        <aside class="tags fi-pricetag-multiple">没标签</aside>
         {{/if}}
         <div class="clearfix"></div>
     </article>
@@ -62,11 +62,12 @@
 
     <div class="row">
         <footer class="small-16 columns site-footer">
+            <!--底部footer-->
             <!-- <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a> -->
             <div class="inner">
-                <section class="published">Proudly published with <a href="http://ghost.org" target="_blank">Ghost</a></section>
-                 <section class="copyright">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-                 <section class="theme-author">Theme (<a href="https://github.com/twogrey/ichi">download here</a>) developed by <a href="https://alexisdegryse.fr">Alexis Degryse</a></section>
+                <section class="published">技术出版： <a href="http://ghost.org" target="_blank">Ghost</a></section>
+                 <section class="copyright">内容版权 <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
+                 <section class="theme-author">主题 (<a href="https://github.com/twogrey/ichi">download here</a>) 设计 <a href="https://alexisdegryse.fr">Alexis Degryse</a></section>
             </div>
         </footer>
     </div>
