--- a/default.hbs
+++ b/default.hbs
@@ -51,9 +51,9 @@
     <button type="button" class="overlay-close">Close</button>
     <nav>
         <ul>
-            <li><a href="{{@blog.url}}">Home</a></li>
-            <li><a href="{{@blog.url}}/about">About</a></li>
-            <li><a href="{{@blog.url}}/contact">Contact</a></li>
+            <li><a href="{{@blog.url}}">首页</a></li>
+            <li><a href="{{@blog.url}}/about">关于我</a></li>
+<!--            <li><a href="{{@blog.url}}/contact">Contact</a></li>-->
         </ul>
     </nav>
 </div>
@@ -89,11 +89,13 @@
                 <a href="#" class="fi-social-steam"></a>
                 <a href="#" class="fi-social-xbox"></a>
                 <a href="#" class="fi-social-reddit"></a> -->
+<!--
                 <a href="#" class="fi-rss"></a>
                 <a href="#" class="fi-social-google-plus"></a>
                 <a href="#" class="fi-social-youtube"></a>
                 <a href="#" class="fi-social-twitter"></a>
                 <a href="#" class="fi-social-facebook"></a>
+-->
             </div>
         </div>
     </div>
