--- a/post.hbs
+++ b/post.hbs
@@ -59,7 +59,9 @@
             </footer>
 
         {{/post}}
-        <h3 class="title-disqus"><span class="fi-comments"></span>Discussions</h3>
+        <!--
+            暂时注释评论
+    <h3 class="title-disqus"><span class="fi-comments"></span>Discussions</h3>
         <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'example'; // required: replace example with your forum shortname
@@ -76,5 +78,6 @@
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
     </article>
+    -->
 
 </main>
