添加评论和去除contact

--- a/post.hbs
+++ b/post.hbs
@@ -24,7 +24,8 @@
             </section>
             <hr>
             <footer class="post-footer">
-
+                <div id="uyan_frame"></div>
+<!--
                 <section class="share">
                     <h4>Liked this post ? Share it.</h4>
                     <a class="fi-social-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
@@ -37,10 +38,11 @@
                        onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                     </a>
                 </section>
+-->
 
                 <section class="author">
                     <header>
-                        <span>About the author</span>
+                        <span>关于作者</span>
                     </header>
                     <section>
                         <h4>{{author.name}}</h4>
@@ -81,3 +83,4 @@
     -->
 
 </main>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2006826"></script>
