--- a/index.hbs
+++ b/index.hbs
@@ -28,7 +28,7 @@
             </section>
             <a class="button read-more right small" href="{{url}}">阅读更多</a>
             {{#if tags}}
-            <aside class="tags fi-pricetag-multiple">{{tags prefix="Posted on "}}</aside>
+            <aside class="tags fi-pricetag-multiple">{{tags prefix="标签： "}}</aside>
             {{else}}
             <aside class="tags fi-pricetag-multiple">没标签</aside>
             {{/if}}
@@ -47,7 +47,7 @@
         </section>
         <a class="button read-more right small" href="{{url}}">阅读更多</a>
         {{#if tags}}
-        <aside class="tags fi-pricetag-multiple">{{tags prefix="Posted on "}}</aside>
+        <aside class="tags fi-pricetag-multiple">{{tags prefix="标签 "}}</aside>
         {{else}}
         <aside class="tags fi-pricetag-multiple">没标签</aside>
         {{/if}}
@@ -67,7 +67,7 @@
             <div class="inner">
                 <section class="published">技术出版： <a href="http://ghost.org" target="_blank">Ghost</a></section>
                  <section class="copyright">内容版权 <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-                 <section class="theme-author">主题 (<a href="https://github.com/twogrey/ichi">download here</a>) 设计 <a href="https://alexisdegryse.fr">Alexis Degryse</a></section>
+                 <section class="theme-author">主题 (<a href="https://github.com/twogrey/ichi">点击下载</a>) 设计 <a href="https://alexisdegryse.fr">Alexis Degryse</a></section>
             </div>
         </footer>
     </div>
