--- a/assets/css/googlefont.css
+++ b/assets/css/googlefont.css
@@ -1,3 +1,5 @@
+/*//fonts.googleapis.com/css?family=Open+Sans:300,700,400|Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic"*/
+
 /* cyrillic-ext */
 @font-face {
   font-family: 'Open Sans';
